# canconf

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  canmon-d.out  pyproject.toml
man/: canconf.1  canmon.1  cantalk.1
src/canconf/: __init__.py  cantalk.py  cli.py  common.py  monitor.py
