[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "canconf"
version = "0.1.0"
description = "One-shot reconfiguration of all SocketCAN / CAN-FD interfaces"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Dr. Michael Lauer", email = "mickey@vanille-media.de" },
]
keywords = ["can", "canbus", "canfd", "socketcan", "linux", "automotive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Hardware",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]

[project.scripts]
canconf = "canconf.cli:main"
canmon = "canconf.monitor:main"

[project.urls]
Homepage = "https://github.com/mickeyl/canconf"
Repository = "https://github.com/mickeyl/canconf"
Issues = "https://github.com/mickeyl/canconf/issues"
